// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling 
    $235.00
  </h1>
</div>
`;

exports[`should render ExpensesSummary with many expenses 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling 
    $1,239,087.00
  </h1>
</div>
`;
